--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3.8'
 
 services:
-  postgres:
+  pgdev:
     image: pgvector/pgvector:pg16
     container_name: postgres_db
     environment:
-      POSTGRES_DB: myapp
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: pgvector_demo
+      POSTGRES_USER: demo
+      POSTGRES_PASSWORD: demo
     ports:
-      - "5432:5432"
+      - "6432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -23,7 +23,7 @@ services:
     image: redis:7-alpine
     container_name: redis_cache
     ports:
-      - "6379:6379"
+      - "6479:6379"
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes
@@ -32,6 +32,14 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  runner:
+    build: .
+    container_name: runner
+    profiles:
+      - manual
+    volumes:
+      - ./:/app
 
 volumes:
   postgres_data:
