--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-git+https://github.com/FredworkLemmas/incite.git@fred-minor-updates-2025080401
+invocate>=0.2.1
+
+psycopg2-binary==2.9.9
+torch>=2.0.0
+transformers>=4.21.0
+numpy>=1.21.0
+vllm>=0.2.0
+sentence-transformers>=2.2.0
+attrs
+pyyaml
