--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-invocate>=0.2.1
-
 psycopg2-binary==2.9.9
 torch>=2.0.0
 transformers>=4.21.0
@@ -7,5 +5,7 @@ numpy>=1.21.0
 vllm>=0.2.0
 sentence-transformers>=2.2.0
 docling==2.44.0
+pandoc==2.4
 attrs
 pyyaml
+click
