made progress on conversion from epub to markdown

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,9 @@ services:
     volumes:
       - ./:/app
       - /tmp/demo_pgvector/files:/files
+      - tmp_workspace_data:/workspace
 
 volumes:
   postgres_data:
   redis_data:
+  tmp_workspace_data:
