--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ numpy>=1.21.0
 vllm>=0.2.0
 sentence-transformers>=2.2.0
 docling==2.44.0
-pandoc==2.4
+pypandoc==1.15
+python-magic==0.4.27
 attrs
 pyyaml
 click
