--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,14 @@ repos:
     - id: check-yaml
     - id: end-of-file-fixer
     - id: trailing-whitespace
-- repo: https://github.com/psf/black
-  rev: 22.10.0
+#- repo: https://github.com/psf/black
+#  rev: 22.10.0
+#  hooks:
+#    - id: black
+#      args: [--line-length=80]
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.12.9
   hooks:
-    - id: black
+    - id: ruff-format
+    - id: ruff
+      args: [--fix]
