--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,9 @@ line-length = 80
 
 [tool.ruff.lint]
 extend-ignore = ["E501"]
+
+[tool.ruff.format]
+quote-style = 'single'
+indent-style = 'space'
+docstring-code-format = true
+docstring-code-line-length = 80
