minor update to summarizer

--- a/config/summarize.yml
+++ b/config/summarize.yml
@@ -50,6 +50,8 @@ vars:
           characters?
         * What is the arc of the character changes from the beginning to the
           end of the story?
+        * Whare are some key examples of the character's style and manner of
+          speech?
 
       If the text is informative, you should also be able to answer:
 
