--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   pgdev:
     image: pgvector/pgvector:pg16
@@ -44,7 +42,9 @@ services:
     volumes:
       - ./:/app
       - /tmp/demo_pgvector/files:/files
+      - tmp_workspace_data:/workspace
 
 volumes:
   postgres_data:
   redis_data:
+  tmp_workspace_data:
